...
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.107"
        app:layout_constraintTop_toBottomOf="@+id/Profile_username" />

    <Button
        android:id="@+id/buttonChangePassword"
        android:layout_width="184dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/change_password"
        app:layout_constraintBottom_toBottomOf="parent"
...
