<resources>
    <string name="app_name">q_up</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>

    <!-- Strings related to User profile -->
    <string name="action_settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="my_placesOFF">Show My Places</string>
    <string name="my_placesON">Hide My Places</string>
    <string name="username">"Username"</string>
    <string name="myprofile">"My Profile"</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="info">Info</string>
    <string name="PlaceDetails">Details</string>
    <string name="change_password">Change password</string>
    <string name="change_info">Change user info</string>

    <string name="website_text">Go to website</string>
    <string name="chatButton">Chat!</string>

</resources>
