...
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="76dp"
        android:layout_height="66dp"
        android:layout_gravity="left|center_vertical"
        android:drawableBottom="@drawable/info"
        android:textAllCaps="false"
        app:layout_constraintLeft_toRightOf="@+id/btn_chat"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintHorizontal_bias="1.0"
...
